multi line select box readability fix

--- a/octoprint_cyborgtheme/static/css/overrides.css
+++ b/octoprint_cyborgtheme/static/css/overrides.css
@@ -181,3 +181,9 @@ input[type="file"] {
 #touch #terminal-filterpanel label {
 	color: #ddd;
 }
+
+/*fix for multiple item select boxes being hard to read*/
+select[multiple] {
+    background-color: inherit;
+    color: inherit;
+}
